# ovs

./: .gitignore  1_2.job  2_1.job  Makefile  draw.py
1lab/: draw.py  draw2.py  main.c
1lab/jobs_oak/: qpi.job  sm.job
1lab/jobs_pine/: qpi.job  sm.job
2lab/: CMakeLists.txt  main.cpp
2lab/apps/exp1/: CMakeLists.txt  main.cpp
2lab/apps/exp2/: CMakeLists.txt  main.cpp
2lab/apps/exp3/: CMakeLists.txt  main.cpp
2lab/apps/generate_file_with_tasks/: CMakeLists.txt  main.cpp
2lab/apps/schedule/: CMakeLists.txt  main.cpp
2lab/apps/task/: CMakeLists.txt  main.cpp
2lab/include/: exp_data.hpp  files.hpp  schedule.hpp  strings.hpp  task.hpp  tournament_tree.hpp
2lab/jobs/: FFDH_1024.job  FFDH_4096.job  NFDH_1024.job  NFDH_4096.job
2lab/scripts/: convert_data.py  draw.py  generate_tasks.sh  get_real_tasks.sh  run_exp1.sh
2lab/src/: CMakeLists.txt  files.cpp  schedule.cpp  strings.cpp  task.cpp  tournament_tree.cpp
3lab/: draw.py
3lab/src/: main.cpp
3lab/src/first/: main.cpp
3lab/src/second/: main.cpp
4lab/: .gitignore  Makefile
4lab/plots/exp2_1/: theta.gnu
4lab/plots/exp2_2/: theta.gnu
4lab/plots/exp2_3/: theta.gnu
4lab/plots/exp3_1/: T.gnu
4lab/plots/exp3_2/: T.gnu
4lab/plots/exp3_3/: T.gnu
4lab/src/: main.cpp
jobs_oak/: net.job
jobs_pine/: net.job
